--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Quarkus Microservice Wow so cool</title>
+    <title>Quarkus Microservice</title>
     <style>
         body {
             color: #ffffff;
@@ -18,15 +18,15 @@
         }
 
         h2 {
-            font-size: 500%;
+            font-size: 100%;
             font-weight: normal;
-            margin-bottom: 0;
+            margin-bottom: 10;
         }
     </style>
 </head>
 <body>
 <div align="center">
-    <h1>Welcome to V1 the quarkus web application</h1>
+    <h1>Welcome to V1 the quarkus web application. This is a fun place.</h1>
     <h2>This application will be deployed on Kubernetes.</h2>
 </div>
 </body>
