--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -28,6 +28,7 @@
 <div align="center">
     <h1>Welcome to V1 the quarkus web application. This is a fun place.</h1>
     <h2>This application will be deployed on Kubernetes.</h2>
+    <h2> Updated for expressions <h2>
 </div>
 </body>
 </html>
