--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <div align="center">
-    <h1>Baked and Bifurcated To Prod! Again Welcome to V1 the quarkus web application. This is a fun place.</h1>
+    <h1>Baked and Bifurcated To Prod! Again And again Welcome to V1 the quarkus web application. This is a fun place.</h1>
     <h2>This application will be deployed on Kubernetes.</h2>
     <h2> Updated for expressions <h2>
 </div>
